Fixed Sponsor overflow x & resized schedule so that it never scrolls on mobile

--- a/web/makeathon-2/styles/Schedule.module.css
+++ b/web/makeathon-2/styles/Schedule.module.css
@@ -142,6 +142,14 @@
   .dayContainer img {
     display: none;
   }
+
+  .cliff_left {
+    display: none;
+  }
+
+  .cliff_right {
+    display: none;
+  }
 }
 
 @media (max-device-width: 750px) {
@@ -152,6 +160,6 @@
 
 @media (max-device-width: 520px) {
   .body {
-    height: 1300px;
+    height: 1400px;
   }
 }
