--- a/web/makeathon-2/styles/Sponsors.module.css
+++ b/web/makeathon-2/styles/Sponsors.module.css
@@ -14,13 +14,14 @@
     hsl(275deg 26% 8%) 94%,
     hsl(0deg 0% 7%) 100%
   );
-  
+
   height: 900px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 .container {
